crates/fsm-dsl/corpus/basic_machine.txt
==================
Basic Machine
==================

machines {
  machine MyMachine @id(1) {
    states @id(2) {
      initial state Idle @id(3);
      state Running @id(4) {
        ON EventA GOTO Idle;
      }
    }
  }
}

---

(source_file
  (machines_block
    (machine_definition
      name: (identifier)
      id: (numeric_id (integer_literal))
      (machine_body
        (states_block
          id: (numeric_id (integer_literal))
          (state_definition
            initial: (initial)
            name: (identifier)
            id: (numeric_id (integer_literal))
          )
          (state_definition
            name: (identifier)
            id: (numeric_id (integer_literal))
            (transition_definition
              event: (identifier)
              target: (identifier)
            )
          )
        )
      )
    )
  )
) 